<resources>
    <string name="app_name">app_1</string>
    <string name="tv_first_name_label">Imię:</string>
    <string name="et_first_name_hint">Wprowadź imię</string>
    <string name="tv_last_name_label">Nazwisko:</string>
    <string name="et_last_name_hint">Wprowadź nazwisko</string>
    <string name="tv_number_of_grades_label">Liczba ocen:</string>
    <string name="et_number_of_grades_hint">Wprowadź liczę ocen (5-15)</string>
    <string name="btn_submit_label">Oceny</string>
    <string name="et_first_name_error_text">Imię musi być wprowadzone!</string>
    <string name="et_last_name_error_text">Nazwisko musi być wprowadzone!</string>
    <string name="et_number_of_grades_error_text">Liczba ocen musi być wprowadzona</string>
    <string name="et_number_of_grades_format_error_text">Liczba ocen musi być liczbą od 5 do 15!</string>
    <string name="btn_send_grades_label">Oblicz średnią</string>
    <string name="rb_grade_2_label">2</string>
    <string name="rb_grade_3_label">3</string>
    <string name="rb_grade_4_label">4</string>
    <string name="rb_grade_5_label">5</string>
    <string-array name="nazwy_przedmiotow_tab">
        <item>Fiz.</item>
        <item>Mat.</item>
        <item>El.</item>
        <item>TC</item>
        <item>PP</item>
        <item>Java</item>
        <item>TPI</item>
        <item>C</item>
        <item>C++</item>
        <item>ASD</item>
        <item>MN</item>
        <item>PRiR</item>
        <item>ISM</item>
        <item>PN</item>
        <item>NI</item>
    </string-array>
</resources>