<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/et_first_name"
        android:text="@string/tv_first_name_label" />
    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_first_name"
        android:hint="@string/et_first_name_hint"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/tv_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/et_last_name"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/tv_last_name_label" />
    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_first_name"
        android:hint="@string/et_last_name_hint"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/tv_number_of_grades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/et_number_of_grades"
        android:text="@string/tv_number_of_grades_label" />
    <EditText
        android:id="@+id/et_number_of_grades"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_last_name"
        app:layout_constraintStart_toEndOf="@id/tv_number_of_grades"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/et_number_of_grades_hint"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/btn_submit"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_number_of_grades"
        android:text="@string/btn_submit_label"/>


</androidx.constraintlayout.widget.ConstraintLayout>